# fastapi-netcom

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/app/: config.py  db.py  main.py  utils.py
backend/app/api/: auth.py  ping.py  users.py
backend/app/core/: security.py
backend/app/core/security/: errors.py  utils.py
backend/app/crud/: users.py
backend/app/email_templates/: new_user.html
backend/app/models/pydantic/: auth.py  users.py
backend/app/models/tortoise/: users.py
backend/db/: create.sql
backend/tests/: conftest.py  test_users.py
backend/tests/test_api/: test_auth.py  test_users.py
backend/tests/test_core/: test_security_unit.py
